promql/parser/y.output

state 0
	$accept: .start $end 

	error  shift 6
	START_METRIC  shift 2
	START_SERIES_DESCRIPTION  shift 3
	START_EXPRESSION  shift 4
	START_METRIC_SELECTOR  shift 5
	.  error

	start  goto 1

state 1
	$accept:  start.$end 
	start:  start.EOF 

	$end  accept
	EOF  shift 7
	.  error


state 2
	start:  START_METRIC.metric 
	label_set: .    (118)

	IDENTIFIER  shift 17
	LEFT_BRACE  shift 31
	METRIC_IDENTIFIER  shift 22
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	AVG  shift 11
	BOTTOMK  shift 12
	COUNT  shift 14
	COUNT_VALUES  shift 15
	GROUP  shift 16
	MAX  shift 21
	MIN  shift 23
	QUANTILE  shift 25
	STDDEV  shift 26
	STDVAR  shift 27
	SUM  shift 28
	TOPK  shift 29
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  reduce 118 (src line 631)

	metric_identifier  goto 9
	label_set  goto 10
	metric  goto 8

state 3
	start:  START_SERIES_DESCRIPTION.series_description 
	label_set: .    (118)

	IDENTIFIER  shift 17
	LEFT_BRACE  shift 31
	METRIC_IDENTIFIER  shift 22
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	AVG  shift 11
	BOTTOMK  shift 12
	COUNT  shift 14
	COUNT_VALUES  shift 15
	GROUP  shift 16
	MAX  shift 21
	MIN  shift 23
	QUANTILE  shift 25
	STDDEV  shift 26
	STDVAR  shift 27
	SUM  shift 28
	TOPK  shift 29
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  reduce 118 (src line 631)

	metric_identifier  goto 9
	label_set  goto 10
	metric  goto 33
	series_description  goto 32

state 4
	start:  START_EXPRESSION.EOF 
	start:  START_EXPRESSION.expr 

	EOF  shift 34
	IDENTIFIER  shift 49
	LEFT_BRACE  shift 70
	LEFT_PAREN  shift 51
	METRIC_IDENTIFIER  shift 22
	NUMBER  shift 50
	STRING  shift 52
	ADD  shift 68
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	SUB  shift 69
	AVG  shift 56
	BOTTOMK  shift 57
	COUNT  shift 58
	COUNT_VALUES  shift 59
	GROUP  shift 60
	MAX  shift 61
	MIN  shift 62
	QUANTILE  shift 63
	STDDEV  shift 64
	STDVAR  shift 65
	SUM  shift 66
	TOPK  shift 67
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	aggregate_op  goto 48
	metric_identifier  goto 54
	unary_op  goto 53
	step_invariant_expr  goto 47
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 35
	function_call  goto 38
	label_matchers  goto 55
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 5
	start:  START_METRIC_SELECTOR.vector_selector 

	IDENTIFIER  shift 17
	LEFT_BRACE  shift 70
	METRIC_IDENTIFIER  shift 22
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	AVG  shift 11
	BOTTOMK  shift 12
	COUNT  shift 14
	COUNT_VALUES  shift 15
	GROUP  shift 16
	MAX  shift 21
	MIN  shift 23
	QUANTILE  shift 25
	STDDEV  shift 26
	STDVAR  shift 27
	SUM  shift 28
	TOPK  shift 29
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	metric_identifier  goto 54
	label_matchers  goto 55
	vector_selector  goto 71

state 6
	start:  error.    (7)

	.  reduce 7 (src line 194)


state 7
	start:  start EOF.    (6)

	.  reduce 6 (src line 193)


state 8
	start:  START_METRIC metric.    (1)

	.  reduce 1 (src line 175)


state 9
	metric:  metric_identifier.label_set 
	label_set: .    (118)

	LEFT_BRACE  shift 31
	.  reduce 118 (src line 631)

	label_set  goto 72

state 10
	metric:  label_set.    (94)

	.  reduce 94 (src line 615)


state 11
	metric_identifier:  AVG.    (95)

	.  reduce 95 (src line 623)


state 12
	metric_identifier:  BOTTOMK.    (96)

	.  reduce 96 (src line 623)


state 13
	metric_identifier:  BY.    (97)

	.  reduce 97 (src line 623)


state 14
	metric_identifier:  COUNT.    (98)

	.  reduce 98 (src line 623)


state 15
	metric_identifier:  COUNT_VALUES.    (99)

	.  reduce 99 (src line 623)


state 16
	metric_identifier:  GROUP.    (100)

	.  reduce 100 (src line 623)


state 17
	metric_identifier:  IDENTIFIER.    (101)

	.  reduce 101 (src line 623)


state 18
	metric_identifier:  LAND.    (102)

	.  reduce 102 (src line 623)


state 19
	metric_identifier:  LOR.    (103)

	.  reduce 103 (src line 623)


state 20
	metric_identifier:  LUNLESS.    (104)

	.  reduce 104 (src line 623)


state 21
	metric_identifier:  MAX.    (105)

	.  reduce 105 (src line 623)


state 22
	metric_identifier:  METRIC_IDENTIFIER.    (106)

	.  reduce 106 (src line 623)


state 23
	metric_identifier:  MIN.    (107)

	.  reduce 107 (src line 623)


state 24
	metric_identifier:  OFFSET.    (108)

	.  reduce 108 (src line 623)


state 25
	metric_identifier:  QUANTILE.    (109)

	.  reduce 109 (src line 623)


state 26
	metric_identifier:  STDDEV.    (110)

	.  reduce 110 (src line 623)


state 27
	metric_identifier:  STDVAR.    (111)

	.  reduce 111 (src line 623)


state 28
	metric_identifier:  SUM.    (112)

	.  reduce 112 (src line 623)


state 29
	metric_identifier:  TOPK.    (113)

	.  reduce 113 (src line 623)


state 30
	metric_identifier:  WITHOUT.    (114)

	.  reduce 114 (src line 623)


state 31
	label_set:  LEFT_BRACE.label_set_list RIGHT_BRACE 
	label_set:  LEFT_BRACE.label_set_list COMMA RIGHT_BRACE 
	label_set:  LEFT_BRACE.RIGHT_BRACE 

	error  shift 77
	IDENTIFIER  shift 76
	RIGHT_BRACE  shift 74
	.  error

	label_set_list  goto 73
	label_set_item  goto 75

state 32
	start:  START_SERIES_DESCRIPTION series_description.    (2)

	.  reduce 2 (src line 180)


state 33
	series_description:  metric.series_values 
	series_values: .    (127)

	$end  reduce 127 (src line 667)
	error  shift 79
	EOF  reduce 127 (src line 667)
	SPACE  reduce 127 (src line 667)
	.  error

	series_values  goto 78

state 34
	start:  START_EXPRESSION EOF.    (3)

	.  reduce 3 (src line 182)


state 35
	start:  START_EXPRESSION expr.    (4)
	binary_expr:  expr.ADD bin_modifier expr 
	binary_expr:  expr.DIV bin_modifier expr 
	binary_expr:  expr.EQLC bin_modifier expr 
	binary_expr:  expr.GTE bin_modifier expr 
	binary_expr:  expr.GTR bin_modifier expr 
	binary_expr:  expr.LAND bin_modifier expr 
	binary_expr:  expr.LOR bin_modifier expr 
	binary_expr:  expr.LSS bin_modifier expr 
	binary_expr:  expr.LTE bin_modifier expr 
	binary_expr:  expr.LUNLESS bin_modifier expr 
	binary_expr:  expr.MOD bin_modifier expr 
	binary_expr:  expr.MUL bin_modifier expr 
	binary_expr:  expr.NEQ bin_modifier expr 
	binary_expr:  expr.POW bin_modifier expr 
	binary_expr:  expr.SUB bin_modifier expr 
	offset_expr:  expr.OFFSET duration 
	offset_expr:  expr.OFFSET error 
	step_invariant_expr:  expr.AT signed_or_unsigned_number 
	step_invariant_expr:  expr.AT at_modifier_preprocessors LEFT_PAREN RIGHT_PAREN 
	step_invariant_expr:  expr.AT error 
	matrix_selector:  expr.LEFT_BRACKET duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON duration error 
	subquery_expr:  expr.LEFT_BRACKET duration COLON error 
	subquery_expr:  expr.LEFT_BRACKET duration error 
	subquery_expr:  expr.LEFT_BRACKET error 

	LEFT_BRACKET  shift 97
	ADD  shift 80
	DIV  shift 81
	EQLC  shift 82
	GTE  shift 83
	GTR  shift 84
	LAND  shift 85
	LOR  shift 86
	LSS  shift 87
	LTE  shift 88
	LUNLESS  shift 89
	MOD  shift 90
	MUL  shift 91
	NEQ  shift 92
	POW  shift 93
	SUB  shift 94
	AT  shift 96
	OFFSET  shift 95
	.  reduce 4 (src line 185)


state 36
	expr:  aggregate_expr.    (8)

	.  reduce 8 (src line 198)


state 37
	expr:  binary_expr.    (9)

	.  reduce 9 (src line 200)


state 38
	expr:  function_call.    (10)

	.  reduce 10 (src line 201)


state 39
	expr:  matrix_selector.    (11)

	.  reduce 11 (src line 202)


state 40
	expr:  number_literal.    (12)

	.  reduce 12 (src line 203)


state 41
	expr:  offset_expr.    (13)

	.  reduce 13 (src line 204)


state 42
	expr:  paren_expr.    (14)

	.  reduce 14 (src line 205)


state 43
	expr:  string_literal.    (15)

	.  reduce 15 (src line 206)


state 44
	expr:  subquery_expr.    (16)

	.  reduce 16 (src line 207)


state 45
	expr:  unary_expr.    (17)

	.  reduce 17 (src line 208)


state 46
	expr:  vector_selector.    (18)

	.  reduce 18 (src line 209)


state 47
	expr:  step_invariant_expr.    (19)

	.  reduce 19 (src line 210)


state 48
	aggregate_expr:  aggregate_op.aggregate_modifier function_call_body 
	aggregate_expr:  aggregate_op.function_call_body aggregate_modifier 
	aggregate_expr:  aggregate_op.function_call_body 
	aggregate_expr:  aggregate_op.error 

	error  shift 100
	LEFT_PAREN  shift 103
	BY  shift 101
	WITHOUT  shift 102
	.  error

	aggregate_modifier  goto 98
	function_call_body  goto 99

state 49
	function_call:  IDENTIFIER.function_call_body 
	metric_identifier:  IDENTIFIER.    (101)

	LEFT_PAREN  shift 103
	.  reduce 101 (src line 623)

	function_call_body  goto 104

state 50
	number_literal:  NUMBER.    (181)

	.  reduce 181 (src line 737)


state 51
	paren_expr:  LEFT_PAREN.expr RIGHT_PAREN 

	IDENTIFIER  shift 49
	LEFT_BRACE  shift 70
	LEFT_PAREN  shift 51
	METRIC_IDENTIFIER  shift 22
	NUMBER  shift 50
	STRING  shift 52
	ADD  shift 68
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	SUB  shift 69
	AVG  shift 56
	BOTTOMK  shift 57
	COUNT  shift 58
	COUNT_VALUES  shift 59
	GROUP  shift 60
	MAX  shift 61
	MIN  shift 62
	QUANTILE  shift 63
	STDDEV  shift 64
	STDVAR  shift 65
	SUM  shift 66
	TOPK  shift 67
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	aggregate_op  goto 48
	metric_identifier  goto 54
	unary_op  goto 53
	step_invariant_expr  goto 47
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 105
	function_call  goto 38
	label_matchers  goto 55
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 52
	string_literal:  STRING.    (189)

	.  reduce 189 (src line 779)


state 53
	unary_expr:  unary_op.expr 

	IDENTIFIER  shift 49
	LEFT_BRACE  shift 70
	LEFT_PAREN  shift 51
	METRIC_IDENTIFIER  shift 22
	NUMBER  shift 50
	STRING  shift 52
	ADD  shift 68
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	SUB  shift 69
	AVG  shift 56
	BOTTOMK  shift 57
	COUNT  shift 58
	COUNT_VALUES  shift 59
	GROUP  shift 60
	MAX  shift 61
	MIN  shift 62
	QUANTILE  shift 63
	STDDEV  shift 64
	STDVAR  shift 65
	SUM  shift 66
	TOPK  shift 67
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	aggregate_op  goto 48
	metric_identifier  goto 54
	unary_op  goto 53
	step_invariant_expr  goto 47
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 106
	function_call  goto 38
	label_matchers  goto 55
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 54
	vector_selector:  metric_identifier.label_matchers 
	vector_selector:  metric_identifier.    (81)

	LEFT_BRACE  shift 70
	.  reduce 81 (src line 520)

	label_matchers  goto 107

state 55
	vector_selector:  label_matchers.    (82)

	.  reduce 82 (src line 539)


state 56
	metric_identifier:  AVG.    (95)
	aggregate_op:  AVG.    (139)

	error  reduce 139 (src line 723)
	LEFT_PAREN  reduce 139 (src line 723)
	BY  reduce 139 (src line 723)
	WITHOUT  reduce 139 (src line 723)
	.  reduce 95 (src line 623)


state 57
	metric_identifier:  BOTTOMK.    (96)
	aggregate_op:  BOTTOMK.    (140)

	error  reduce 140 (src line 723)
	LEFT_PAREN  reduce 140 (src line 723)
	BY  reduce 140 (src line 723)
	WITHOUT  reduce 140 (src line 723)
	.  reduce 96 (src line 623)


state 58
	metric_identifier:  COUNT.    (98)
	aggregate_op:  COUNT.    (141)

	error  reduce 141 (src line 723)
	LEFT_PAREN  reduce 141 (src line 723)
	BY  reduce 141 (src line 723)
	WITHOUT  reduce 141 (src line 723)
	.  reduce 98 (src line 623)


state 59
	metric_identifier:  COUNT_VALUES.    (99)
	aggregate_op:  COUNT_VALUES.    (142)

	error  reduce 142 (src line 723)
	LEFT_PAREN  reduce 142 (src line 723)
	BY  reduce 142 (src line 723)
	WITHOUT  reduce 142 (src line 723)
	.  reduce 99 (src line 623)


state 60
	metric_identifier:  GROUP.    (100)
	aggregate_op:  GROUP.    (143)

	error  reduce 143 (src line 723)
	LEFT_PAREN  reduce 143 (src line 723)
	BY  reduce 143 (src line 723)
	WITHOUT  reduce 143 (src line 723)
	.  reduce 100 (src line 623)


state 61
	metric_identifier:  MAX.    (105)
	aggregate_op:  MAX.    (144)

	error  reduce 144 (src line 723)
	LEFT_PAREN  reduce 144 (src line 723)
	BY  reduce 144 (src line 723)
	WITHOUT  reduce 144 (src line 723)
	.  reduce 105 (src line 623)


state 62
	metric_identifier:  MIN.    (107)
	aggregate_op:  MIN.    (145)

	error  reduce 145 (src line 723)
	LEFT_PAREN  reduce 145 (src line 723)
	BY  reduce 145 (src line 723)
	WITHOUT  reduce 145 (src line 723)
	.  reduce 107 (src line 623)


state 63
	metric_identifier:  QUANTILE.    (109)
	aggregate_op:  QUANTILE.    (146)

	error  reduce 146 (src line 723)
	LEFT_PAREN  reduce 146 (src line 723)
	BY  reduce 146 (src line 723)
	WITHOUT  reduce 146 (src line 723)
	.  reduce 109 (src line 623)


state 64
	metric_identifier:  STDDEV.    (110)
	aggregate_op:  STDDEV.    (147)

	error  reduce 147 (src line 723)
	LEFT_PAREN  reduce 147 (src line 723)
	BY  reduce 147 (src line 723)
	WITHOUT  reduce 147 (src line 723)
	.  reduce 110 (src line 623)


state 65
	metric_identifier:  STDVAR.    (111)
	aggregate_op:  STDVAR.    (148)

	error  reduce 148 (src line 723)
	LEFT_PAREN  reduce 148 (src line 723)
	BY  reduce 148 (src line 723)
	WITHOUT  reduce 148 (src line 723)
	.  reduce 111 (src line 623)


state 66
	metric_identifier:  SUM.    (112)
	aggregate_op:  SUM.    (149)

	error  reduce 149 (src line 723)
	LEFT_PAREN  reduce 149 (src line 723)
	BY  reduce 149 (src line 723)
	WITHOUT  reduce 149 (src line 723)
	.  reduce 112 (src line 623)


state 67
	metric_identifier:  TOPK.    (113)
	aggregate_op:  TOPK.    (150)

	error  reduce 150 (src line 723)
	LEFT_PAREN  reduce 150 (src line 723)
	BY  reduce 150 (src line 723)
	WITHOUT  reduce 150 (src line 723)
	.  reduce 113 (src line 623)


state 68
	unary_op:  ADD.    (175)

	.  reduce 175 (src line 729)


state 69
	unary_op:  SUB.    (176)

	.  reduce 176 (src line 729)


state 70
	label_matchers:  LEFT_BRACE.label_match_list RIGHT_BRACE 
	label_matchers:  LEFT_BRACE.label_match_list COMMA RIGHT_BRACE 
	label_matchers:  LEFT_BRACE.RIGHT_BRACE 

	error  shift 112
	IDENTIFIER  shift 111
	RIGHT_BRACE  shift 109
	.  error

	label_match_list  goto 108
	label_matcher  goto 110

state 71
	start:  START_METRIC_SELECTOR vector_selector.    (5)

	.  reduce 5 (src line 191)


state 72
	metric:  metric_identifier label_set.    (93)

	.  reduce 93 (src line 601)


state 73
	label_set:  LEFT_BRACE label_set_list.RIGHT_BRACE 
	label_set:  LEFT_BRACE label_set_list.COMMA RIGHT_BRACE 
	label_set_list:  label_set_list.COMMA label_set_item 
	label_set_list:  label_set_list.error 

	error  shift 115
	COMMA  shift 114
	RIGHT_BRACE  shift 113
	.  error


state 74
	label_set:  LEFT_BRACE RIGHT_BRACE.    (117)

	.  reduce 117 (src line 629)


state 75
	label_set_list:  label_set_item.    (120)

	.  reduce 120 (src line 637)


state 76
	label_set_item:  IDENTIFIER.EQL STRING 
	label_set_item:  IDENTIFIER.EQL error 
	label_set_item:  IDENTIFIER.error 

	error  shift 117
	EQL  shift 116
	.  error


state 77
	label_set_item:  error.    (125)

	.  reduce 125 (src line 650)


state 78
	series_description:  metric series_values.    (126)
	series_values:  series_values.SPACE series_item 
	series_values:  series_values.SPACE 

	SPACE  shift 118
	.  reduce 126 (src line 658)


state 79
	series_values:  error.    (130)

	.  reduce 130 (src line 673)


state 80
	binary_expr:  expr ADD.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 119
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 81
	binary_expr:  expr DIV.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 124
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 82
	binary_expr:  expr EQLC.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 125
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 83
	binary_expr:  expr GTE.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 126
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 84
	binary_expr:  expr GTR.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 127
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 85
	binary_expr:  expr LAND.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 128
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 86
	binary_expr:  expr LOR.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 129
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 87
	binary_expr:  expr LSS.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 130
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 88
	binary_expr:  expr LTE.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 131
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 89
	binary_expr:  expr LUNLESS.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 132
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 90
	binary_expr:  expr MOD.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 133
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 91
	binary_expr:  expr MUL.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 134
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 92
	binary_expr:  expr NEQ.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 135
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 93
	binary_expr:  expr POW.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 136
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 94
	binary_expr:  expr SUB.bin_modifier expr 
	bool_modifier: .    (48)

	BOOL  shift 123
	.  reduce 48 (src line 302)

	bin_modifier  goto 137
	bool_modifier  goto 121
	group_modifiers  goto 120
	on_or_ignoring  goto 122

state 95
	offset_expr:  expr OFFSET.duration 
	offset_expr:  expr OFFSET.error 

	error  shift 139
	DURATION  shift 140
	.  error

	duration  goto 138

state 96
	step_invariant_expr:  expr AT.signed_or_unsigned_number 
	step_invariant_expr:  expr AT.at_modifier_preprocessors LEFT_PAREN RIGHT_PAREN 
	step_invariant_expr:  expr AT.error 

	error  shift 143
	NUMBER  shift 148
	ADD  shift 149
	SUB  shift 150
	START  shift 146
	END  shift 147
	.  error

	at_modifier_preprocessors  goto 142
	number  goto 144
	signed_number  goto 145
	signed_or_unsigned_number  goto 141

state 97
	matrix_selector:  expr LEFT_BRACKET.duration RIGHT_BRACKET 
	subquery_expr:  expr LEFT_BRACKET.duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr LEFT_BRACKET.duration COLON duration error 
	subquery_expr:  expr LEFT_BRACKET.duration COLON error 
	subquery_expr:  expr LEFT_BRACKET.duration error 
	subquery_expr:  expr LEFT_BRACKET.error 

	error  shift 152
	DURATION  shift 140
	.  error

	duration  goto 151

state 98
	aggregate_expr:  aggregate_op aggregate_modifier.function_call_body 

	LEFT_PAREN  shift 103
	.  error

	function_call_body  goto 153

state 99
	aggregate_expr:  aggregate_op function_call_body.aggregate_modifier 
	aggregate_expr:  aggregate_op function_call_body.    (22)

	BY  shift 101
	WITHOUT  shift 102
	.  reduce 22 (src line 221)

	aggregate_modifier  goto 154

state 100
	aggregate_expr:  aggregate_op error.    (23)

	.  reduce 23 (src line 223)


state 101
	aggregate_modifier:  BY.grouping_labels 

	error  shift 157
	LEFT_PAREN  shift 156
	.  error

	grouping_labels  goto 155

state 102
	aggregate_modifier:  WITHOUT.grouping_labels 

	error  shift 157
	LEFT_PAREN  shift 156
	.  error

	grouping_labels  goto 158

state 103
	function_call_body:  LEFT_PAREN.function_call_args RIGHT_PAREN 
	function_call_body:  LEFT_PAREN.RIGHT_PAREN 

	IDENTIFIER  shift 49
	LEFT_BRACE  shift 70
	LEFT_PAREN  shift 51
	METRIC_IDENTIFIER  shift 22
	NUMBER  shift 50
	RIGHT_PAREN  shift 160
	STRING  shift 52
	ADD  shift 68
	LAND  shift 18
	LOR  shift 19
	LUNLESS  shift 20
	SUB  shift 69
	AVG  shift 56
	BOTTOMK  shift 57
	COUNT  shift 58
	COUNT_VALUES  shift 59
	GROUP  shift 60
	MAX  shift 61
	MIN  shift 62
	QUANTILE  shift 63
	STDDEV  shift 64
	STDVAR  shift 65
	SUM  shift 66
	TOPK  shift 67
	BY  shift 13
	OFFSET  shift 24
	WITHOUT  shift 30
	.  error

	aggregate_op  goto 48
	metric_identifier  goto 54
	unary_op  goto 53
	step_invariant_expr  goto 47
	aggregate_expr  goto 36
	binary_expr  goto 37
	expr  goto 161
	function_call  goto 38
	function_call_args  goto 159
	label_matchers  goto 55
	matrix_selector  goto 39
	number_literal  goto 40
	offset_expr  goto 41
	paren_expr  goto 42
	string_literal  goto 43
	subquery_expr  goto 44
	unary_expr  goto 45
	vector_selector  goto 46

state 104
	function_call:  IDENTIFIER function_call_body.    (59)

	.  reduce 59 (src line 351)


state 105
	binary_expr:  expr.ADD bin_modifier expr 
	binary_expr:  expr.DIV bin_modifier expr 
	binary_expr:  expr.EQLC bin_modifier expr 
	binary_expr:  expr.GTE bin_modifier expr 
	binary_expr:  expr.GTR bin_modifier expr 
	binary_expr:  expr.LAND bin_modifier expr 
	binary_expr:  expr.LOR bin_modifier expr 
	binary_expr:  expr.LSS bin_modifier expr 
	binary_expr:  expr.LTE bin_modifier expr 
	binary_expr:  expr.LUNLESS bin_modifier expr 
	binary_expr:  expr.MOD bin_modifier expr 
	binary_expr:  expr.MUL bin_modifier expr 
	binary_expr:  expr.NEQ bin_modifier expr 
	binary_expr:  expr.POW bin_modifier expr 
	binary_expr:  expr.SUB bin_modifier expr 
	paren_expr:  LEFT_PAREN expr.RIGHT_PAREN 
	offset_expr:  expr.OFFSET duration 
	offset_expr:  expr.OFFSET error 
	step_invariant_expr:  expr.AT signed_or_unsigned_number 
	step_invariant_expr:  expr.AT at_modifier_preprocessors LEFT_PAREN RIGHT_PAREN 
	step_invariant_expr:  expr.AT error 
	matrix_selector:  expr.LEFT_BRACKET duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON duration error 
	subquery_expr:  expr.LEFT_BRACKET duration COLON error 
	subquery_expr:  expr.LEFT_BRACKET duration error 
	subquery_expr:  expr.LEFT_BRACKET error 

	LEFT_BRACKET  shift 97
	RIGHT_PAREN  shift 162
	ADD  shift 80
	DIV  shift 81
	EQLC  shift 82
	GTE  shift 83
	GTR  shift 84
	LAND  shift 85
	LOR  shift 86
	LSS  shift 87
	LTE  shift 88
	LUNLESS  shift 89
	MOD  shift 90
	MUL  shift 91
	NEQ  shift 92
	POW  shift 93
	SUB  shift 94
	AT  shift 96
	OFFSET  shift 95
	.  error


106: shift/reduce conflict (shift 96(0), red'n 79(5)) on AT
state 106
	binary_expr:  expr.ADD bin_modifier expr 
	binary_expr:  expr.DIV bin_modifier expr 
	binary_expr:  expr.EQLC bin_modifier expr 
	binary_expr:  expr.GTE bin_modifier expr 
	binary_expr:  expr.GTR bin_modifier expr 
	binary_expr:  expr.LAND bin_modifier expr 
	binary_expr:  expr.LOR bin_modifier expr 
	binary_expr:  expr.LSS bin_modifier expr 
	binary_expr:  expr.LTE bin_modifier expr 
	binary_expr:  expr.LUNLESS bin_modifier expr 
	binary_expr:  expr.MOD bin_modifier expr 
	binary_expr:  expr.MUL bin_modifier expr 
	binary_expr:  expr.NEQ bin_modifier expr 
	binary_expr:  expr.POW bin_modifier expr 
	binary_expr:  expr.SUB bin_modifier expr 
	offset_expr:  expr.OFFSET duration 
	offset_expr:  expr.OFFSET error 
	step_invariant_expr:  expr.AT signed_or_unsigned_number 
	step_invariant_expr:  expr.AT at_modifier_preprocessors LEFT_PAREN RIGHT_PAREN 
	step_invariant_expr:  expr.AT error 
	matrix_selector:  expr.LEFT_BRACKET duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON maybe_duration RIGHT_BRACKET 
	subquery_expr:  expr.LEFT_BRACKET duration COLON duration error 
	subquery_expr:  expr.LEFT_BRACKET duration COLON error 
	subquery_expr:  expr.LEFT_BRACKET duration error 
	subquery_expr:  expr.LEFT_BRACKET error 
	unary_expr:  unary_op expr.    (79)

	LEFT_BRACKET  shift 97
	POW  shift 93
	AT  shift 96
	OFFSET  shift 95
	.  reduce 79 (src line 485)


state 107
	vector_selector:  metric_identifier label_matchers.    (80)

	.  reduce 80 (src line 504)


state 108
	label_matchers:  LEFT_BRACE label_match_list.RIGHT_BRACE 
	label_matchers:  LEFT_BRACE label_match_list.COMMA RIGHT_BRACE 
	label_match_list:  label_match_list.COMMA label_matcher 
	label_match_list:  label_match_list.error 

	error  shift 165
	COMMA  shift 164
	RIGHT_BRACE  shift 163
	.  error


state 109
	label_matchers:  LEFT_BRACE RIGHT_BRACE.    (85)

	.  reduce 85 (src line 563)


state 110
	label_match_list:  label_matcher.    (87)

	.  reduce 87 (src line 581)


state 111
	label_matcher:  IDENTIFIER.match_op STRING 
	label_matcher:  IDENTIFIER.match_op error 
	label_matcher:  IDENTIFIER.error 

	error  shift 167
	EQL  shift 168
	EQL_REGEX  shift 170
	NEQ  shift 169
	NEQ_REGEX  shift 171
	.  error

	match_op  goto 166

state 112
	label_matcher:  error.    (92)

	.  reduce 92 (src line 593)


state 113
	label_set:  LEFT_BRACE label_set_list RIGHT_BRACE.    (115)

	.  reduce 115 (src line 625)


state 114
	label_set:  LEFT_BRACE label_set_list COMMA.RIGHT_BRACE 
	label_set_list:  label_set_list COMMA.label_set_item 

	error  shift 77
	IDENTIFIER  shift 76
	RIGHT_BRACE  shift 172
	.  error

	label_set_item  goto 173
